       well as it writes out one vcf file per contact instead of just
       one big file containing all contacts. Thanks to Paul Oremland.

       NEW: Preliminary (no meta data) support of h.264 video format
       via the libmp4v2 interface. Thanks to Peter Lieverdink.

       NEW: Script to sync notes from Tomboy to the iPod. Thanks to
       Tejas Dinkar.

       NEW: Spanish translation. Thanks to Alejandro Lamas.

gtkpod V0.99.5CVS

       NEW FEATURE: Preliminary support for mobile phones supporting
       iTunes (see Changelog_detailed for details)

       IMPROVEMENT: Handle multiple calendar and task files in
       sync-evocalendar script. Thanks to Michele C. Soccio

       IMPROVEMENT: Lyrics are displayed on the iPod when available.

       BUGFIX: When updating tracks, files were not copied to the iPod
       even if the file was changed.

       BUGFIX: Removing playlists could crash gtkpod.

       WORKAROUND: Disable sorting of playlist view as this crashed
       gtkpod.

gtkpod V0.99.4

       BUGFIX: Options for exporting playlist files could not be
       changed.

       BUGFIX: Fixed segfault when updating tracks or directories with
       artowrk present.

       BUGFIX: Browse button for "Sync Notes Script" opened a
       directory browser instead of a file browser.

       BUGFIX: Writing ID3v2.4 tags in UTF8 did not always
       work. Thanks to 't0c' for the patch.

       BUGFIX: Context Menus for removing playlists from the iPod were
       not displayed. Thanks to 'rob/biffhero' for pointing this out.

gtkpod V0.99.2
       BUGFIX: Fix segfault when applying preferences.

       BUGFIX: Don't require libcurl (not actively used).

       UPDATE: Swedish translation catalog

       IMPROVEMENT: Allow export of multiple thunderbird address
       books (by naming the output filename).

gtkpod V0.99.0
       NEW: type-ahead search functionality. Thanks to Nick Piper,
       http://www.nickpiper.co.uk/ -- please note that the list view