@@ -1,3 +1,9 @@
+2006-04-28 Jorg Schuler <jcsjcs@users.sourceforge.net>
+
+	 * src/confirmation.c: pressing 'OK' several time would call
+           the ok_handler several times, most likely resulting in a
+           crash. Thanks to dforsi for pointing this out.
+
 2006-04-27 Jorg Schuler <jcsjcs@users.sourceforge.net>
 
 	 * scripts/sync-tomboy.sh: contributed by Tejas Dinkar
